# local_ai_assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: audio_handler.py  context_manager.py  llama_handler.py  main.py  piper_handler.py  single_file.py  whisper_handler.py
