[tool.poetry]
name = "local-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Darren Sharman <darren.sharman@nemtek.co.uk>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
transformers = "^4.40.2"
whisper = "^1.1.10"
piper = "^0.14.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
